# fastenv

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  cspell.json  mkdocs.yml  pylock.ci.toml  pylock.docs.toml  pylock.toml  pyproject.toml  vercel.json  zensical.toml
.basedpyright/: baseline.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  codecov.yml
.github/workflows/: ci.yml  codeql.yml  hooks.yml  stale.yml
docs/: changelog.md  cloud-object-storage.md  comparisons.md  contributing.md  dotenv.md  environment.md  index.md
fastenv/: __init__.py  cloud.py  dotenv.py  starlette_config.py  types.py  utilities.py
fastenv/cloud/: object_storage.py
tests/: conftest.py  test_cloud.py  test_dotenv.py  test_fastapi.py  test_starlette_config.py  test_types.py  test_utilities.py  test_version.py
tests/cloud/: test_object_storage.py
